Updated current weather section html and css

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,17 @@ button:hover {
   background-color: #fe9e5a;
 }
 
+ul {
+  padding: 0px;
+}
+
+li {
+  text-decoration: none;
+  font-size: 16px;
+  list-style: none;
+  padding: 0px;
+}
+
 span {
   color: rgb(209, 203, 203);
 }
@@ -44,16 +55,15 @@ span {
   padding: 20px;
 }
 
-.emoji {
-  font-size: 100px;
-}
-
 .city,
 .time,
+.temp,
 .emoji,
 .dayOverview,
 .currentTemp,
-.highLow {
+.humidity,
+.wind {
+  display: block;
   text-align: center;
   margin: 0 auto;
   text-transform: capitalize;
@@ -65,7 +75,9 @@ span {
   font-size: 40px;
 }
 
-.time {
+.time,
+.humidity,
+.wind {
   font-family: "PT Serif", serif;
   font-weight: 400;
   font-size: 15px;
@@ -79,6 +91,10 @@ span {
 .temp {
   font-size: 40px;
   color: #ffffff;
+}
+
+.currentEmoji {
+  width: 100px;
 }
 
 .fahrenheit-link,
